kubernetes/by-cluster/single-spicy/workloads/applications/by-namespace/development/forgejo/resources/envoy-btp.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: forgejo
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: forgejo
  timeout:
    http:
      requestTimeout: 0s
    tcp:
      connectTimeout: 30s
  connection:
    bufferLimit: 50Mi
